--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
@@ -34,7 +34,7 @@
                 *ngFor="let setting of environmentSettings"
                 [value]="setting.id"
               >
-                {{ setting.name }}
+                {{ translateSetting(setting.name) }}
               </mat-option>
             </mat-select>
             <mat-error
