--- a/StoreAndDeliverUI/src/app/features/cargo-requests/components/grouped-cargo-item/grouped-cargo-item.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/components/grouped-cargo-item/grouped-cargo-item.component.html
@@ -1,4 +1,4 @@
-<div class="main container-fluid">
+<div class="main container-fluid m-3">
   <div class="row d-flex justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 col-12" *ngFor="let key of keys">
       <app-cargo-request-item
