--- a/StoreAndDeliverUI/src/app/layout/accordion/accordion.component.scss
+++ b/StoreAndDeliverUI/src/app/layout/accordion/accordion.component.scss
@@ -26,6 +26,7 @@
 .example-accordion-item-header,
 .example-accordion-item-body {
   padding: 16px;
+  background-color: rgb(245, 243, 238);
 }
 
 .example-accordion-item-header:hover {
