--- a/StoreAndDeliverUI/src/app/features/cargo-requests/components/optimized-cargo-requests-review/optimized-cargo-requests-review.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/components/optimized-cargo-requests-review/optimized-cargo-requests-review.component.html
@@ -5,6 +5,9 @@
       <div>
         <app-units-panel
           (onUnitSelectionChanged)="onUnitSelectionChanged()"
+          (onUnitSelectionChangedAfterLanguageSwitching)="
+            onUnitSelectionChanged()
+          "
         ></app-units-panel>
       </div>
       <div class="d-flex justify-content-center">
@@ -50,6 +53,11 @@
         [cargoRequestsGroup]="group"
         [requestStatus]="selectedRequestStatus"
       ></app-grouped-cargo-item>
+    </div>
+    <div *ngIf="cargoRequestsGroups.length === 0">
+      <h1 class="text-center">
+        {{ "cargoRequest.noAvailableRequests" | translate }}
+      </h1>
     </div>
   </div>
 </div>
