Fix min and max value for settings

--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
@@ -54,7 +54,8 @@
               required
               matInput
               type="number"
-              min="0"
+              [min]="getMinSettingValue(setting)"
+              [max]="getMaxSettingValue(setting)"
               (focusout)="onFocusOut()"
             />
             <mat-error
@@ -74,7 +75,8 @@
               required
               matInput
               type="number"
-              min="0"
+              [min]="getMinSettingValue(setting)"
+              [max]="getMaxSettingValue(setting)"
               (focusout)="onFocusOut()"
             />
             <mat-error
