--- a/StoreAndDeliverUI/src/app/features/cargo-requests/components/user-requests/user-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/components/user-requests/user-requests.component.html
@@ -46,16 +46,21 @@
         </div>
       </div>
     </div>
-    <div *ngFor="let group of cargoRequestsGroups">
-      <app-grouped-cargo-item
-        [cargoRequestsGroup]="group"
-        [requestStatus]="selectedRequestStatus"
-      ></app-grouped-cargo-item>
+    <div *ngIf="!isLoading">
+      <div *ngFor="let group of cargoRequestsGroups">
+        <app-grouped-cargo-item
+          [cargoRequestsGroup]="group"
+          [requestStatus]="selectedRequestStatus"
+        ></app-grouped-cargo-item>
+      </div>
+      <div *ngIf="cargoRequestsGroups.length === 0">
+        <h1 class="text-center">
+          {{ "cargoRequest.noAvailableRequests" | translate }}
+        </h1>
+      </div>
     </div>
-    <div *ngIf="cargoRequestsGroups.length === 0">
-      <h1 class="text-center">
-        {{ "cargoRequest.noAvailableRequests" | translate }}
-      </h1>
+    <div *ngIf="isLoading">
+      <app-spinner></app-spinner>
     </div>
   </div>
 </div>
