--- a/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
+++ b/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
@@ -60,6 +60,19 @@
             </h3>
           </div>
         </mat-list-item>
+        <mat-list-item
+          *ngIf="showTab('carrierManagement')"
+          routerLink="/carrier-management"
+          routerLinkActive="active"
+        >
+          <i class="far fa-user-edit"></i>
+          <div fxFlex="10"></div>
+          <div *ngIf="sidenavWidth > 6" class="sidenav-item">
+            <h3 class="ml-2">
+              {{ "sidenav.carrierManagement" | translate }}
+            </h3>
+          </div>
+        </mat-list-item>
       </mat-nav-list>
     </mat-sidenav>
 
