--- a/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
+++ b/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
@@ -73,6 +73,19 @@
             </h3>
           </div>
         </mat-list-item>
+        <mat-list-item
+          *ngIf="showTab('storeManagement')"
+          routerLink="/store-management"
+          routerLinkActive="active"
+        >
+          <i class="fas fa-container-storage"></i>
+          <div fxFlex="10"></div>
+          <div *ngIf="sidenavWidth > 6" class="sidenav-item">
+            <h3 class="ml-2">
+              {{ "sidenav.storeManagement" | translate }}
+            </h3>
+          </div>
+        </mat-list-item>
       </mat-nav-list>
     </mat-sidenav>
 
