--- a/StoreAndDeliverUI/src/app/features/dashboard/dashboard/dashboard.component.html
+++ b/StoreAndDeliverUI/src/app/features/dashboard/dashboard/dashboard.component.html
@@ -1,3 +1,11 @@
 <div class="main container-fluid">
-  <p>dashboard works!</p>
+  <h1 class="text-center m-3">
+    {{ getGreeting() }} {{ currentUser.userName }}!
+  </h1>
+  <div *ngIf="isAdmin">
+    <app-admin-dashboard></app-admin-dashboard>
+  </div>
+  <div *ngIf="isCarrier">Hi Carrier</div>
+  <div *ngIf="isUser">Hi User</div>
+  <div *ngIf="isCompanyAdmin">Hi company admin</div>
 </div>
