Add dashboard for the user

--- a/StoreAndDeliverUI/src/app/features/dashboard/dashboard/dashboard.component.html
+++ b/StoreAndDeliverUI/src/app/features/dashboard/dashboard/dashboard.component.html
@@ -6,6 +6,6 @@
     <app-admin-dashboard></app-admin-dashboard>
   </div>
   <div *ngIf="isCarrier">Hi Carrier</div>
-  <div *ngIf="isUser">Hi User</div>
+  <div *ngIf="isUser"><app-user-dashboard></app-user-dashboard></div>
   <div *ngIf="isCompanyAdmin">Hi company admin</div>
 </div>
