--- a/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
+++ b/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
@@ -21,7 +21,7 @@
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavId">
     <ul class="navbar-nav mr-auto mt-lg-0">
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a
           class="nav-link"
           id="dashboard"
@@ -29,7 +29,7 @@
           routerLinkActive="active current"
           >{{ "navbar.aboutUs" | translate }}</a
         >
-      </li>
+      </li> -->
     </ul>
     <ul class="navbar-nav ml-auto mt-lg-0">
       <li class="nav-item">
