Add russian language support

--- a/StoreAndDeliverUI/src/app/features/landing-page/landing-page/landing-page.component.html
+++ b/StoreAndDeliverUI/src/app/features/landing-page/landing-page/landing-page.component.html
@@ -31,6 +31,9 @@
       <a class="lang" (click)="onUsaLangClick()">
         <img src="assets/images/usa.png" class="img" alt="USA" width="30px" />
       </a>
+      <a class="lang" (click)="onRussiaLangClick()">
+        <img src="assets/images/ru.png" class="img" alt="Russia" width="30px" />
+      </a>
       <a mat-button class="signIn" (click)="openLoginDialog()">{{
         "common.signin" | translate
       }}</a>
