--- a/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
+++ b/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
@@ -37,7 +37,7 @@
           <img
             src="assets/images/ukraine.png"
             class="img"
-            alt="ukraine"
+            alt="Ukraine"
             width="30px"
         /></a>
       </li>
@@ -46,6 +46,17 @@
       <li class="nav-item">
         <a class="nav-link language" (click)="onLanguageClick('en')"
           ><img src="assets/images/usa.png" class="img" alt="USA" width="30px"
+        /></a>
+      </li>
+    </ul>
+    <ul class="navbar-nav mt-lg-0">
+      <li class="nav-item">
+        <a class="nav-link language" (click)="onLanguageClick('ru')"
+          ><img
+            src="assets/images/ru.png"
+            class="img"
+            alt="Russia"
+            width="30px"
         /></a>
       </li>
     </ul>
