--- a/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
+++ b/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
@@ -77,6 +77,9 @@
           class="dropdown-menu dropdown-menu-right"
           aria-labelledby="navbarDropdownMenuLink"
         >
+          <button class="dropdown-item" (click)="onChangePasswordButtonClick()">
+            {{ "changePassword.changePassword" | translate }}
+          </button>
           <button class="dropdown-item" (click)="OnLogOutButtonCLick()">
             {{ "common.logout" | translate }}
           </button>
