Added maps to show stores

--- a/StoreAndDeliverUI/src/app/features/admin-features/components/store-management/store-management.component.html
+++ b/StoreAndDeliverUI/src/app/features/admin-features/components/store-management/store-management.component.html
@@ -58,4 +58,17 @@
       </mat-paginator>
     </div>
   </div>
+  <div>
+    <agm-map
+      [latitude]="markers[0].latitude"
+      [longitude]="markers[0].longtitude"
+    >
+      <agm-marker
+        *ngFor="let marker of markers"
+        [latitude]="marker.latitude"
+        [longitude]="marker.longtitude"
+        [label]="marker.labelOptions"
+      ></agm-marker>
+    </agm-map>
+  </div>
 </div>
