--- a/StoreAndDeliverUI/src/app/features/admin-features/components/store-management/store-management.component.scss
+++ b/StoreAndDeliverUI/src/app/features/admin-features/components/store-management/store-management.component.scss
@@ -1,10 +1,9 @@
 .main {
-  min-height: calc(100vh - 55px);
   table {
     width: 100%;
   }
   agm-map {
     height: 400px;
-    padding: 20px;
+    padding: 20px 20px 0px 20px;
   }
 }
