--- a/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
+++ b/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
@@ -90,6 +90,19 @@
             </h3>
           </div>
         </mat-list-item>
+        <mat-list-item
+          *ngIf="showTab('charts')"
+          routerLink="/company-statistics"
+          routerLinkActive="active"
+        >
+          <i class="fas fa-chart-bar"></i>
+          <div fxFlex="10"></div>
+          <div *ngIf="sidenavWidth > 6" class="sidenav-item">
+            <h3 class="ml-2">
+              {{ "sidenav.statistics" | translate }}
+            </h3>
+          </div>
+        </mat-list-item>
       </mat-nav-list>
     </mat-sidenav>
 
