--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicators-setup-form/indicators-setup-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicators-setup-form/indicators-setup-form.component.html
@@ -47,6 +47,7 @@
         class="setting-wrapper"
         [cargoSettings]="initialCargo.cargo[selectedIndex]?.settings || []"
         [environmentSettings]="environmentSettings"
+        [addCargoModel]="initialCargo.cargo[selectedIndex]"
       ></app-indicator-item-form>
     </div>
   </form>
